refresh problem + renamed webshot to output channel

--- a/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
+++ b/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
@@ -56,7 +56,7 @@ explainPublish=Publish catalog to the web shop.
 publishSucess=Publish of catalog to the web shop was successful.
 noProperties=Group {0} has no defined properties.
 explainNavigationList=The list below are the top level groups used as the starting point for the navigation structure in the web shop.
-explainLanguages=The following languages are the languages present to customers to show the webshop. 
+explainLanguages=The following languages are the languages for the output channel 
 explainEnums=Manage the enumeration list.
 explainOwnerCategory=The product is part of the following category: 
 promotionSaved=Promotion saved.
@@ -193,7 +193,7 @@ selectNestedFileHelp=Select nested file in this multi-file import
 
 catalogMenu=Catalog
 taxonomyMenu=Taxonomy
-webshopMenu =Webshop
+webshopMenu =Output Channel
 dataExchangeMenu=Data Exchange
 ordersMenu=Orders
 campaignsMenu =Campaigns
@@ -219,11 +219,11 @@ noProductNameSet=productname not set
 noCategoryNameSet=categoryname not set
 shopNameLabel=Shop
 shopUrlLabel=Url
-newWebshopLink=New Web Shop
+newWebshopLink=New Output Channel
 removeImportedDataMessage=This will delete all data that was imported by this import source. Continue?
 removeImportedDataButton=Delete Import Data
 
-loadingWebShopsMessage=Loading webshops
+loadingWebShopsMessage=Loading output channels
 addLanguageLink=Add language...
 setLanguageLink=Set language...
 noLanguagesAvailable=No languages available
@@ -236,7 +236,7 @@ shopLanguagesLabel=Languages
 shopLanguagesHelp=The languages that a shop will be available in.
 removeShopConfirmationMessage=Are you sure you want to permanently remove shop {0}
 removeShopLink=remove shop...
-loadingWebShopsAction=loading webshops
+loadingWebShopsAction=loading output channel
 defaultLanguageName=Default
 savingWebShopsAction=saving
 topLevelCategoriesLabel=Top-level Categories
